# QtWidgets-AddressBook

./: .gitignore  CMakeLists.txt  adddialog.cpp  addresswidget.cpp  addresswidget.h  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  CMakeLists.txt.autosave  test_addressbook.cpp
